--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#F67280">
+    android:background="@drawable/wallpaperbg">
+
+
+
+
     <ImageView
         android:id="@+id/profilePhoto"
-        android:layout_width="300dp"
-        android:layout_height="135dp"
-        android:layout_marginLeft="50dp"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_marginLeft="133dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/defaultprofilephoto"
- />
+        android:background="@drawable/profilecustombutton"
+        android:src="@drawable/defaultprofilephoto" />
 
     <Button
         android:id="@+id/upload"
@@ -22,11 +26,12 @@
         android:layout_height="75dp"
         android:layout_gravity="right"
         android:layout_below="@+id/profilePhoto"
-        android:background="#A32CC4"
+        android:background="#ff8c00"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:textColor="#632323"
         android:textStyle="bold"
+        android:fontFamily="@font/risque_regular"
         android:text="Upload Profile Photo"
         android:textSize="18dp"
         />
@@ -38,7 +43,8 @@
         android:layout_below="@+id/upload"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:textColor="#BC3232"
+        android:fontFamily="@font/bubblegumsans_regular"
+        android:textColor="#49222c"
         android:textStyle="bold"
         android:text="Name"
         android:textSize="35dp" />
@@ -48,6 +54,7 @@
         android:layout_width="250dp"
         android:layout_height="55dp"
         android:layout_below="@+id/upload"
+        android:fontFamily="@font/bubblegumsans_regular"
         android:layout_marginLeft="120dp"
         android:layout_marginTop="14dp" />
 
@@ -58,8 +65,9 @@
         android:layout_height="60dp"
         android:layout_below="@+id/name"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/bubblegumsans_regular"
         android:gravity="center"
-        android:textColor="#BC3232"
+        android:textColor="#49222c"
         android:textStyle="bold"
         android:text="Age"
         android:textSize="35dp" />
@@ -69,6 +77,7 @@
         android:layout_width="250dp"
         android:layout_height="55dp"
         android:layout_below="@+id/textName"
+        android:fontFamily="@font/bubblegumsans_regular"
         android:layout_marginLeft="120dp"
         android:layout_marginTop="14dp" />
 
@@ -78,10 +87,10 @@
         android:layout_below="@+id/age"
         android:layout_width="130dp"
         android:layout_height="60dp"
-
+        android:fontFamily="@font/bubblegumsans_regular"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:textColor="#BC3232"
+        android:textColor="#49222c"
         android:textStyle="bold"
         android:text="Gender"
         android:textSize="35dp" />
@@ -90,6 +99,7 @@
         android:layout_below="@+id/age"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+
         android:orientation="horizontal"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="140dp"
@@ -126,12 +136,28 @@
         android:layout_gravity="right"
         android:layout_marginTop="25dp"
         android:layout_centerInParent="true"
-        android:background="#A32CC4"
+        android:background="@drawable/profilecustombutton"
+        android:fontFamily="@font/risque_regular"
         android:textColor="#632323"
         android:textStyle="bold"
         android:text="Save"
-        android:textSize="18dp"
+        android:textSize="20dp"
         />
+    ///Back
+    <Button
+        android:id="@+id/backbuttonProfile"
+        android:layout_width="100dp"
+        android:layout_height="55dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="550dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/backbutton"
+        android:textColor="#632323"
+        android:textStyle="bold"
+        android:text="Back"
+        android:textSize="20dp"
+        />
+
     ///NextPage
     <Button
         android:id="@+id/startbutton"
@@ -139,8 +165,10 @@
         android:layout_height="55dp"
         android:layout_gravity="right"
         android:layout_marginTop="550dp"
-       android:background="#A32CC4"
+
         android:textColor="#632323"
+        android:background="@drawable/backbutton"
+        android:layout_marginLeft="300dp"
         android:textStyle="bold"
         android:text="Next"
         android:textSize="18dp"
