--- a/app/src/main/res/menu/home_page.xml
+++ b/app/src/main/res/menu/home_page.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_help"
+        android:title="@string/help_action"
+        android:icon="@drawable/ic_help"
+        app:showAsAction="ifRoom|withText"
+        />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
