--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -10,29 +10,18 @@
     tools:showIn="@layout/app_bar_home_page"
     android:background="#eceff1">
 
-    <Button
-        android:id="@+id/helpBtnId1"
-        android:layout_width="305dp"
-        android:layout_height="185dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="60dp"
-        android:background="#42f5da"
-        android:text="Help"
-        android:textColor="#b03864"
-        android:textSize="100dp" />
 
     <Button
         android:id="@+id/puzzleBtnId1"
         android:layout_width="305dp"
         android:layout_height="185dp"
-        android:layout_below="@id/helpBtnId1"
         android:layout_marginLeft="60dp"
         android:layout_marginVertical="10dp"
         android:background="#de7878"
         android:drawableTop="@drawable/puzzle11"
-        android:text="Puzzle"
+        android:text="@string/play_action"
         android:textColor="#fff200"
-        android:textSize="30dp" />
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/flashCardBtnId1"
@@ -42,7 +31,7 @@
         android:layout_marginLeft="60dp"
         android:background="#81c784"
         android:drawableTop="@drawable/flash23"
-        android:text="Flash Card"
+        android:text="@string/card_action"
         android:textColor="#a249a4"
-        android:textSize="30dp" />
+        android:textSize="30sp" />
 </RelativeLayout>
