--- a/app/src/main/res/layout/activity_level_one.xml
+++ b/app/src/main/res/layout/activity_level_one.xml
@@ -6,15 +6,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LevelOne"
-    android:background="#F67280">
+    android:background="@drawable/levelone_bg">
+
+    ///BlankBirds
+    <ImageView
+        android:id="@+id/blankbird1"
+        android:layout_width="144dp"
+        android:layout_height="184dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/levelonebird_blank" />
 
     <ImageView
-        android:id="@+id/profilePhoto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="133dp"
+        android:id="@+id/blankbirdmain"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_marginLeft="280dp"
         android:layout_marginTop="10dp"
+        android:src="@drawable/levelonebird_blank" />
 
-        android:src="@drawable/levelonebg1" />
+    <ImageView
+        android:id="@+id/blankbird2"
+        android:layout_width="220dp"
+        android:layout_height="170dp"
+        android:layout_marginLeft="530dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/levelonebird_blank" />
 
+    ///MainBird
+    <ImageView
+        android:id="@+id/mainbird"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_marginLeft="280dp"
+        android:layout_marginTop="210dp"
+        android:src="@drawable/levelonebird" />
+    ///Back
+    <Button
+        android:id="@+id/backbuttontoMenu"
+        android:layout_width="100dp"
+        android:layout_height="55dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="300dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/backbutton"
+        android:textColor="#632323"
+        android:textStyle="bold"
+        android:text="Back"
+        android:textSize="20dp"
+        />
 </RelativeLayout>
