--- a/app/src/main/res/layout/content_help_page.xml
+++ b/app/src/main/res/layout/content_help_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".HelpPage"
+    tools:context=".HelpPageActivity"
     tools:showIn="@layout/activity_help_page">
 
     <LinearLayout
