--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".HomePage"
+    tools:context=".HomePageActivity"
     tools:showIn="@layout/app_bar_home_page"
     android:background="#eceff1">
 
