--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,9 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="card_margin">5dp</dimen>
+    <dimen name="card_radius">5dp</dimen>
+    <dimen name="elevation">4dp</dimen>
+    <dimen name="card_title">20sp</dimen>
+    <dimen name="card_image_height">160dp</dimen>
 </resources>
