--- a/app/src/main/res/layout/card_row_item.xml
+++ b/app/src/main/res/layout/card_row_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="?attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -22,8 +23,6 @@
             android:id="@+id/card_image"
             android:layout_width="match_parent"
             android:layout_height="@dimen/card_image_height"
-            android:clickable="true"
-            android:focusable="true"
             android:contentDescription="@string/card_action"
             android:scaleType="fitXY" />
          <TextView
