--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -16,10 +16,11 @@
         android:layout_width="305dp"
         android:layout_height="185dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginVertical="10dp"
+        android:layout_marginTop="50dp"
         android:background="#de7878"
         android:drawableTop="@drawable/puzzle11"
         android:text="@string/play_action"
+        android:onClick="ShowPopUp"
         android:textColor="#fff200"
         android:textSize="30sp" />
 
@@ -29,6 +30,7 @@
         android:layout_height="200dp"
         android:layout_below="@id/puzzleBtnId1"
         android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
         android:background="#81c784"
         android:drawableTop="@drawable/flash23"
         android:text="@string/card_action"
