--- a/app/src/main/res/drawable/wallpaperbg.xml
+++ b/app/src/main/res/drawable/wallpaperbg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#F67280"/>
 
-    <stroke android:color="#3e040a" android:width="6dp"/>
+   <!-- <stroke android:color="#3e040a" android:width="6dp"/>-->
 
     <gradient android:type="linear" android:angle="135" android:startColor="#DA4453"  android:endColor="#89216B"/>
 </shape>
