--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -22,8 +22,8 @@
 
     <Button
         android:id="@+id/upload"
-        android:layout_width="123dp"
-        android:layout_height="75dp"
+        android:layout_width="220dp"
+        android:layout_height="40dp"
         android:layout_gravity="right"
         android:layout_below="@+id/profilePhoto"
         android:background="#ff8c00"
@@ -39,7 +39,7 @@
     <TextView
         android:id="@+id/name"
         android:layout_width="100dp"
-        android:layout_height="60dp"
+        android:layout_height="30dp"
         android:layout_below="@+id/upload"
         android:layout_marginTop="10dp"
         android:gravity="center"
@@ -47,62 +47,64 @@
         android:textColor="#49222c"
         android:textStyle="bold"
         android:text="Name"
-        android:textSize="35dp" />
+        android:textSize="25dp" />
 
     <EditText
         android:id="@+id/textName"
-        android:layout_width="250dp"
-        android:layout_height="55dp"
+        android:layout_width="200dp"
+        android:layout_height="45dp"
         android:layout_below="@+id/upload"
         android:fontFamily="@font/bubblegumsans_regular"
         android:layout_marginLeft="120dp"
-        android:layout_marginTop="14dp" />
+        android:layout_marginTop="5dp"
+        android:textSize="20dp"/>
 
     ///Age
     <TextView
         android:id="@+id/age"
         android:layout_width="100dp"
-        android:layout_height="60dp"
+        android:layout_height="30dp"
         android:layout_below="@+id/name"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/bubblegumsans_regular"
         android:gravity="center"
         android:textColor="#49222c"
         android:textStyle="bold"
         android:text="Age"
-        android:textSize="35dp" />
+        android:textSize="25dp" />
 
     <EditText
         android:id="@+id/textAge"
-        android:layout_width="250dp"
-        android:layout_height="55dp"
+        android:layout_width="65dp"
+        android:layout_height="45dp"
         android:layout_below="@+id/textName"
         android:fontFamily="@font/bubblegumsans_regular"
         android:layout_marginLeft="120dp"
-        android:layout_marginTop="14dp" />
+        android:layout_marginTop="1dp"
+        android:textSize="20dp"/>
 
     ///Gender
     <TextView
         android:id="@+id/gender"
         android:layout_below="@+id/age"
-        android:layout_width="130dp"
-        android:layout_height="60dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:fontFamily="@font/bubblegumsans_regular"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="25dp"
         android:gravity="center"
         android:textColor="#49222c"
         android:textStyle="bold"
         android:text="Gender"
-        android:textSize="35dp" />
+        android:textSize="25dp" />
     <RadioGroup
         android:id="@+id/radioGrp"
         android:layout_below="@+id/age"
-        android:layout_width="fill_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
 
         android:orientation="horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="140dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="120dp"
         >
         <RadioButton
             android:id="@+id/radioM"
@@ -126,13 +128,36 @@
             />
     </RadioGroup>
 
+    ///E-Mail
+    <TextView
+        android:id="@+id/eMail"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/gender"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/bubblegumsans_regular"
+        android:gravity="center"
+        android:textColor="#49222c"
+        android:textStyle="bold"
+        android:text="E-Mail"
+        android:textSize="25dp" />
+
+    <EditText
+        android:id="@+id/textEMail"
+        android:layout_width="250dp"
+        android:layout_height="45dp"
+        android:layout_below="@+id/radioGrp"
+        android:fontFamily="@font/bubblegumsans_regular"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="7dp"
+        android:textSize="20dp"/>
 
     ///Save
     <Button
         android:id="@+id/savebutton"
-        android:layout_below="@+id/radioGrp"
-        android:layout_width="100dp"
-        android:layout_height="55dp"
+        android:layout_below="@+id/textEMail"
+        android:layout_width="75dp"
+        android:layout_height="37dp"
         android:layout_gravity="right"
         android:layout_marginTop="25dp"
         android:layout_centerInParent="true"
@@ -146,10 +171,10 @@
     ///Back
     <Button
         android:id="@+id/backbuttonProfile"
-        android:layout_width="100dp"
-        android:layout_height="55dp"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
         android:layout_gravity="right"
-        android:layout_marginTop="550dp"
+        android:layout_marginTop="500dp"
         android:layout_marginLeft="10dp"
         android:background="@drawable/backbutton"
         android:textColor="#632323"
@@ -158,19 +183,5 @@
         android:textSize="20dp"
         />
 
-    ///NextPage
-    <Button
-        android:id="@+id/startbutton"
-        android:layout_width="100dp"
-        android:layout_height="55dp"
-        android:layout_gravity="right"
-        android:layout_marginTop="550dp"
 
-        android:textColor="#632323"
-        android:background="@drawable/backbutton"
-        android:layout_marginLeft="300dp"
-        android:textStyle="bold"
-        android:text="Next"
-        android:textSize="18dp"
-        />
 </RelativeLayout>
