--- a/app/src/main/res/layout/activity_level_two.xml
+++ b/app/src/main/res/layout/activity_level_two.xml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/levelTwoPage"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LevelTwo"
     android:background="@drawable/levelone_bg">
 
+    ///BlankBirds
+    <ImageView
+        android:id="@+id/blankbirdmainLevelTwo"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/leveltwobluebirdblank" />
+
+    <ImageView
+        android:id="@+id/blankbird1LevelTwo"
+        android:layout_width="100dp"
+        android:layout_height="75dp"
+        android:layout_marginLeft="175dp"
+        android:layout_marginTop="75dp"
+        android:src="@drawable/leveltwobluebirdblank" />
+
+    <ImageView
+        android:id="@+id/blankbird2LevelTwo"
+        android:layout_width="100dp"
+        android:layout_height="75dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="75dp"
+        android:src="@drawable/leveltwobluebirdblank" />
+
+    ///MainBird
+    <ImageView
+        android:id="@+id/mainbirdLevelTwo"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="300dp"
+        android:src="@drawable/leveltwomainbluebird" />
     ///Back
     <Button
         android:id="@+id/backbuttontoMenu"
