--- a/app/src/main/res/layout/activity_level_one.xml
+++ b/app/src/main/res/layout/activity_level_one.xml
@@ -41,6 +41,26 @@
         android:layout_marginLeft="150dp"
         android:layout_marginTop="300dp"
         android:src="@drawable/levelonebird" />
+
+    ///Congratulation image
+    <ImageView
+        android:id="@+id/levelwinimage"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="310dp"
+         />
+    ///Congratulation text
+    <TextView
+        android:id="@+id/levelwintext"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="250dp"
+        android:fontFamily="@font/bubblegumsans_regular"
+        android:textColor="#f0a144"
+        android:textStyle="bold"
+        android:textSize="45dp" />
     ///Back
     <Button
         android:id="@+id/backbuttontoMenu"
