Puzzle Menu page updated.

--- a/app/src/main/res/menu/activity_puzzle_menu_page_drawer.xml
+++ b/app/src/main/res/menu/activity_puzzle_menu_page_drawer.xml
@@ -23,6 +23,10 @@
             android:id="@+id/nav_levelFour"
             android:icon="@drawable/ic_pets_black_24dp"
             android:title="Level Four" />
+        <item
+            android:id="@+id/nav_levelFive"
+            android:icon="@drawable/ic_pets_black_24dp"
+            android:title="Level Five" />
     </group>
         </menu>
     </item>
