--- a/app/src/main/res/layout/activity_level_five.xml
+++ b/app/src/main/res/layout/activity_level_five.xml
@@ -1,9 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/levelFivePage"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LevelFive">
+    tools:context=".LevelFive"
+    android:background="@drawable/levelone_bg">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    ///Discolored Fish
+    <ImageView
+        android:id="@+id/darkredFishLevelFive"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/darkredfish" />
+
+    <ImageView
+        android:id="@+id/yellowFishLevelFive"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/yellowfish" />
+
+    <ImageView
+        android:id="@+id/purpleFishLevelFive"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/purplefish" />
+
+    ///MainFish
+    <ImageView
+        android:id="@+id/mainFishLevelfive"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="300dp"
+        android:src="@drawable/fish" />
+    ///Congratulation image
+    <ImageView
+        android:id="@+id/levelfivewinimage"
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="310dp"
+        />
+    ///Congratulation text
+    <TextView
+        android:id="@+id/levelfivewintext"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="250dp"
+        android:fontFamily="@font/bubblegumsans_regular"
+        android:textColor="#f0a144"
+        android:textStyle="bold"
+        android:textSize="45sp" />
+    ///Back
+    <Button
+        android:id="@+id/backbuttontoMenu"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="495dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/backbutton"
+        android:textColor="#632323"
+        android:textStyle="bold"
+        android:text="Back"
+        android:textSize="20sp"
+        />
+
+</RelativeLayout>
