--- a/app/src/main/res/layout/activity_level_two_easy.xml
+++ b/app/src/main/res/layout/activity_level_two_easy.xml
@@ -17,7 +17,7 @@
         android:layout_height="144dp"
         android:layout_marginLeft="150dp"
         android:layout_marginTop="40dp"
-        android:src="@drawable/blanktrain" />
+        android:src="@drawable/maintrain" />
 
 
 
