--- a/app/src/main/res/layout/activity_custom_view_acitvity.xml
+++ b/app/src/main/res/layout/activity_custom_view_acitvity.xml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CustomViewActivity">
-    <RelativeLayout
-        android:id="@+id/practiceCanvas"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY = "8dp"
+    tools:context=".CustomViewActivity"
+    android:id="@+id/practiceCanvas">
 
-        ></RelativeLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
