--- a/app/src/main/res/layout/activity_level_one.xml
+++ b/app/src/main/res/layout/activity_level_one.xml
@@ -62,7 +62,7 @@
         android:textStyle="bold"
         android:textSize="45sp" />
     ///Back
-    <Button
+    <!--<Button
         android:id="@+id/backbuttontoMenu"
         android:layout_width="80dp"
         android:layout_height="40dp"
@@ -74,7 +74,7 @@
         android:textStyle="bold"
         android:text="Back"
         android:textSize="20sp"
-        />
+        />-->
     ///Next Level
     <Button
         android:id="@+id/nextlevelbutton"
