another English Alphabet 'B' can now be drawn on the screen with the help of sufficient dot points . These dot points form the shape of an alphabet

--- a/app/src/main/res/layout/activity_custom_view_acitvity.xml
+++ b/app/src/main/res/layout/activity_custom_view_acitvity.xml
@@ -6,5 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".CustomViewActivity"
     android:id="@+id/practiceCanvas">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        android:textSize="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        >
+
+    </Button>
 
 </RelativeLayout>
