Medium Level for better orientation understanding.

--- a/app/src/main/res/menu/activity_puzzle_menu_page_drawer.xml
+++ b/app/src/main/res/menu/activity_puzzle_menu_page_drawer.xml
@@ -24,6 +24,25 @@
             </group>
         </menu>
     </item>
+    <item android:title="Medium">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/nav_levelOne_medium"
+                    android:icon="@drawable/ic_pets_black_24dp"
+                    android:title="Level One" />
+                <item
+                    android:id="@+id/nav_levelTwo_medium"
+                    android:icon="@drawable/ic_pets_black_24dp"
+                    android:title="Level Two" />
+                <item
+                    android:id="@+id/nav_levelThree_medium"
+                    android:icon="@drawable/ic_pets_black_24dp"
+                    android:title="Level Three" />
+
+            </group>
+        </menu>
+    </item>
     <item android:title="Hard">
         <menu>
     <group android:checkableBehavior="single">
