--- a/app/src/main/res/layout/activity_custom_view_acitvity.xml
+++ b/app/src/main/res/layout/activity_custom_view_acitvity.xml
@@ -9,12 +9,22 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/customDrawNextBtn"
         android:text="Next"
         android:textSize="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        >
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/GoTohomePageBtn"
+        android:text="Home"
+        android:textSize="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        />
 
-    </Button>
+
 
 </RelativeLayout>
