--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -13,21 +13,20 @@
 
     <Button
         android:id="@+id/puzzleBtnId1"
-        android:layout_width="305dp"
-        android:layout_height="185dp"
+        android:layout_width="317dp"
+        android:layout_height="180dp"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="50dp"
         android:background="#de7878"
         android:drawableTop="@drawable/puzzle11"
         android:text="@string/play_action"
-        android:onClick="ShowPopUp"
         android:textColor="#fff200"
         android:textSize="30sp" />
 
     <Button
         android:id="@+id/flashCardBtnId1"
-        android:layout_width="305dp"
-        android:layout_height="200dp"
+        android:layout_width="317dp"
+        android:layout_height="180dp"
         android:layout_below="@id/puzzleBtnId1"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="10dp"
@@ -36,4 +35,16 @@
         android:text="@string/card_action"
         android:textColor="#a249a4"
         android:textSize="30sp" />
+
+    <Button
+        android:id="@+id/drawButton"
+        android:layout_width="317dp"
+        android:layout_height="185dp"
+        android:layout_below="@id/flashCardBtnId1"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:background="#E4D176"
+        android:drawableTop="@drawable/rszdrawandlearn"
+        android:text="Practice"
+        android:textSize="25sp" />
 </RelativeLayout>
