Add card to database

--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageView101"
         android:layout_width="match_parent"
         android:layout_height="@dimen/card_image_height"
         android:src="@drawable/add_image"
@@ -22,7 +22,7 @@
         />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/save_action" />
