--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -15,7 +15,19 @@
     android:layout_marginBottom="@dimen/activity_vertical_margin"
   >
 
-
+    <Button
+        android:id="@+id/drawButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/puzzleBtnId1"
+        android:elevation="@dimen/cardview_default_elevation"
+        android:layout_centerHorizontal="true"
+        android:padding="@dimen/card_margin"
+        android:background="#E4D176"
+        android:drawableTop="@drawable/rszdrawandlearn"
+        android:text="@string/practice_action"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="30sp" />
     <Button
         android:elevation="@dimen/cardview_default_elevation"
         android:padding="@dimen/card_margin"
@@ -44,15 +56,5 @@
         android:textColor="#a249a4"
         android:textSize="30sp" />
 
-    <Button
-        android:id="@+id/drawButton"
-        android:layout_width="317dp"
-        android:layout_height="185dp"
-        android:layout_below="@id/flashCardBtnId1"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="10dp"
-        android:background="#E4D176"
-        android:drawableTop="@drawable/rszdrawandlearn"
-        android:text="Practice"
-        android:textSize="25sp" />
+
 </RelativeLayout>
